RESOLVED FIXED189720
REGRESSION (r236006): New waitingForKey() requirement breaks Modern EME tests.
https://bugs.webkit.org/show_bug.cgi?id=189720
Summary REGRESSION (r236006): New waitingForKey() requirement breaks Modern EME tests.
Jer Noble
Reported 2018-09-18 15:39:50 PDT
REGRESSION (r236006): New waitingForKey() requirement breaks Modern EME tests.
Attachments
Patch (2.80 KB, patch)
2018-09-18 15:41 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-09-18 15:40:21 PDT
Jer Noble
Comment 2 2018-09-18 15:41:41 PDT
Xabier Rodríguez Calvar
Comment 3 2018-09-18 23:55:08 PDT
Comment on attachment 350069 [details] Patch Reading your analysis of bug 189616, this will fix your regression if you consider that you're waiting for a key just when you fire the initialization data and will allow to not bail out in step 2 of https://www.w3.org/TR/encrypted-media/#resume-playback . rs=me
WebKit Commit Bot
Comment 4 2018-09-19 06:58:34 PDT
Comment on attachment 350069 [details] Patch Clearing flags on attachment: 350069 Committed r236204: <https://trac.webkit.org/changeset/236204>
WebKit Commit Bot
Comment 5 2018-09-19 06:58:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.