REGRESSION (r236006): New waitingForKey() requirement breaks Modern EME tests. https://bugs.webkit.org/show_bug.cgi?id=189720 <rdar://problem/44572140>

Reviewed by Xabier Rodriguez-Calvar.

Always call waitingForKey() after calling initializationDataEncountered().

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::shouldWaitForLoadingOfResource):
* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::initializationDataEncountered):


Canonical link: https://commits.webkit.org/204693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236204 268f45cc-cd09-0410-ab3c-d52691b4dbfc